--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,9 +1,7 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="@android:style/Theme.Material.Light.Dialog.NoActionBar">
+    <style name="DeviceDefault.Dialog" parent="@android:style/Theme.DeviceDefault.Light.Dialog.NoActionBar">
         <item name="android:colorBackground">@color/Background</item>
-        <!-- Customize your theme here. -->
     </style>
 
 </resources>
