适配更多App发起安装时不用生成临时缓存，提升安装体验 支持"降级安装" 更改为只为"主用户"(user 0)安装

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -4,4 +4,6 @@
         <item name="android:colorBackground">@color/Background</item>
     </style>
 
+    <style name="Translucent" parent="@android:style/Theme.Translucent.NoTitleBar" />
+
 </resources>
